WIP: use tfm-build

--- a/app/views/foreman_tasks/layouts/react.html.erb
+++ b/app/views/foreman_tasks/layouts/react.html.erb
@@ -1,8 +1,8 @@
 <% content_for(:javascripts) do %>
-  <%= webpacked_plugins_js_for :'foreman-tasks' %>
+  <%= builded_js_for 'foreman-tasks/foreman-tasks' %>
 <% end %>
 <% content_for(:stylesheets) do %>
-  <%= webpacked_plugins_css_for :'foreman-tasks' %>
+  <%= builded_css_for 'foreman-tasks/foreman-tasks' %>
 <% end %>
 
 <% content_for(:content) do %>
